--- a/index.html
+++ b/index.html
@@ -62,13 +62,19 @@
 <body>
 
     <div class="header">
-        <h1>Icon Library</h1>
-        <div class="controls">
-            <input type="text" id="search-bar" placeholder="Search icons...">
-            <button class="view-toggle" id="toggle-view">Toggle List/Grid</button>
-        </div>
-        <p id="stats">Loading icons...</p>
+    <h1>Icon Library</h1>
+    <div class="controls">
+        <input type="text" id="search-bar" placeholder="Search icons...">
+        <button class="view-toggle" id="toggle-view">Toggle List/Grid</button>
     </div>
+    
+    <p id="stats">
+        Loading icons... 
+        <button onclick="location.reload()" style="border:none; background:none; cursor:pointer; font-size:12px; color:var(--primary); text-decoration:underline; padding:0; margin-left:10px;">
+            (Sync Now)
+        </button>
+    </p>
+</div>
 
     <div id="gallery" class="grid"></div>
 
